# jordan-nn

./: README.md
backend/: data.csv  jordan.py  main.py  protocols.py  protocols_example.py  pyproject.toml  super_duper_puper_test.py  super_duper_test.py  test.py  testtest.py
backend/jordan/: activation.py  jordan.py  layers.py  network.py  neurons.py
backend/network/: jordan.py  loader.py  main.py  normalizer.py
backend/network/training/: __init__.py  jordan.py  layers.py
backend/protocols_test/: __init__.py  batch_generator.py  dataset.py  example.py  features.py  parser.py  processor.py
backend/tests/nn/: test_jordan_rnn.py
